--- a/landingpage/src/index.css
+++ b/landingpage/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import 'tailwindcss';
 
 
@@ -5,4 +6,8 @@ html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+* {
+  font-family: "Roboto";
 }
