--- a/landingpage/src/index.css
+++ b/landingpage/src/index.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @import 'tailwindcss';
-
 
 html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-* {
-  font-family: "Roboto";
+.font-poppins {
+  font-family: "Poppins", sans-serif !important;
 }
